--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Images created by: https://unsplash.com/@pawel_czerwinski */
 
-@import url("https://fonts.googleapis.com/css2?family=Spartan:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Spartan:400,700&display=swap");
 
 html {
   box-sizing: border-box;
@@ -13,7 +13,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: spartan, sans-serif;
+  font-family: Spartan, sans-serif;
   font-size: 12px;
 }
 
@@ -26,8 +26,8 @@ body {
 }
 
 .img-container {
-  height: 300px;
   width: 300px;
+  height: 300px;
   position: relative;
   top: -50px;
   left: 50px;
@@ -68,8 +68,7 @@ h3 {
   background: #242323;
   border-radius: 5px;
   height: 100%;
-  /* change this to show progress */
-  width: 66%;
+  width: 0%;
   transition: width 0.1s linear;
 }
 
@@ -99,6 +98,7 @@ h3 {
 .fas:hover {
   filter: brightness(80%);
 }
+
 .main-button {
   font-size: 40px;
   position: relative;
